--- a/src/app/bio/bio.component.html
+++ b/src/app/bio/bio.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-
-</div>
+<section>
+  <div class="container">
+    <div class="container">
+      <h6>-BIO</h6>
+      <h3 class="bio-tittle">{{'bio.tittle' | translate}}</h3>
+      <p class="bio-content">{{'bio.bio' | translate}}</p>
+    </div>
+  </div>
+</section>
